examples/test/testpolicy15437.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15437
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key26: value32
      key9: value19
      key34: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value16
          key14: value29
      podSelector:
        matchLabels:
          key17: value17
